<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/kominfo"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/inputUsernameLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:labelFor="@+id/inputUsernameLogin"
            android:inputType="textFilter"
            android:autofillHints="Username" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"

            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/inputPassLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="textPassword"
            android:labelFor="@+id/inputPassLogin"
            android:autofillHints="Password" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:layout_margin="4dp"
            android:onClick="tombol"/>

        <Button
            android:id="@+id/btnRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:layout_margin="4dp"
            android:onClick="tombol"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>