<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:text="@string/username" />

        <EditText
            android:id="@+id/inputUser"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="16dp"
            android:enabled="false"

            android:textColor="@android:color/black"
            android:labelFor="@+id/inputUser"
            android:background="@android:drawable/editbox_background"
            android:autofillHints="Username" />

        <TextView
            android:id="@+id/textView7"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"

            android:textColor="@android:color/black"
            android:padding="16dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/inputEmail"
            android:background="@android:drawable/editbox_background"
            android:autofillHints="Example@domain.com" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:padding="16dp"
            android:text="@string/nama_lengkap" />

        <EditText
            android:id="@+id/inputNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"

            android:textColor="@android:color/black"
            android:padding="16dp"
            android:ems="10"
            android:labelFor="@+id/inputNama"
            android:inputType="textPersonName|textCapWords"
            android:background="@android:drawable/editbox_background"
            android:autofillHints="Nama Lengkap" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:text="@string/asal_sekolah" />

        <EditText
            android:id="@+id/inputSekolah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:enabled="false"

            android:textColor="@android:color/black"
            android:background="@android:drawable/editbox_background"
            android:padding="16dp"

            android:labelFor="@+id/inputSekolah"
            android:autofillHints="Asal Sekolah" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/alamat_tinggal" />

        <EditText
            android:id="@+id/inputAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="16dp"
            android:enabled="false"

            android:textColor="@android:color/black"
            android:inputType="textPersonName"
            android:labelFor="@+id/inputAlamat"
            android:lines="3"
            android:background="@android:drawable/editbox_background"
            android:autofillHints="Alamat Lengkap" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:onClick="btn"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:background="@android:color/holo_blue_dark"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>